完成歌手界面上部分

--- a/music-player-vue/src/commons/style/mixin.scss
+++ b/music-player-vue/src/commons/style/mixin.scss
@@ -1,31 +1,3 @@
-// //定义一些函数，方便到时候直接通过函数调用进行样式替换
-// @mixin bg-image($url) {
-//   background-image: url($url+"@2x.png");
-//   @media (-webkit-min-device-pixel-ratio: 3), (min-device-pixel-ratio: 3) {
-//     background-image: url($url+"@3x.png");
-//   }
-// }
-
-
-// @mixin no-wrap() {
-//   text-overflow: ellipsis;
-//   overflow: hidden;
-//   white-space: nowrap;
-// }
-
-
-// @mixin extend-click() {
-//   position: relative;
-//   &:before {
-//     content: '';
-//     position: absolute;
-//     top: -10px;
-//     left: -10px;
-//     right: -10px;
-//     bottom: -10px;
-//   }
-// }
-
 //文本溢出省略号显示
 @mixin ellipsis($line:1){
   @if $line==1 {
@@ -35,6 +7,7 @@
   }
   @else {
       display: -webkit-box;
+      white-space: normal;
       -webkit-line-clamp: $line;
       -webkit-box-orient: vertical;
       overflow: hidden;
